--- a/CowsAndBulls/CowsAndBulls.csproj
+++ b/CowsAndBulls/CowsAndBulls.csproj
@@ -18,9 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
+    <Folder Include="Views\CowsAndBulls\" />
   </ItemGroup>
 
 </Project>
